--- a/select-me-client/package.json
+++ b/select-me-client/package.json
@@ -8,6 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+
   },
   "private": true,
   "dependencies": {
@@ -19,7 +20,11 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "lightgallery": "^2.0.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-gallery-9": "^1.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
